# ragpi

ragpi-frontend/: pyproject.toml
ragpi-frontend/src/ragpi_frontend/: app.py  config.py
